argocd-apps/app-stack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-db
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:7
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-storage
          mountPath: /data/db
      volumes:
      - name: mongo-storage
        persistentVolumeClaim:
          claimName: mongo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-ui
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-ui
  template:
    metadata:
      labels:
        app: mongo-ui
    spec:
      containers:
      - name: mongo-express
        image: mongo-express:1
        ports:
        - containerPort: 8081
        livenessProbe:
          httpGet:
            path: /status
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /status
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 5  
---
apiVersion: v1
kind: Service
metadata:
  name: ui-service
spec:
  type: NodePort
  selector:
    app: mongo-ui
  ports:
  - port: 8081
    targetPort: 8081
    nodePort: 30081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ui-service
            port:
              number: 8081
